creat the second section Calculating Hydrogen Bonds

--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -57,44 +57,53 @@
     "        \"\"\"Obtenir des informations atomiques sur la chaîne principale\"\"\"\n",
     "        return self.backbone_atoms\n",
     "    \n",
-    "class HydrogenBondDetector:\n",
-    "    \"\"\"Identifier les liaisons hydrogène en fonction de l'énergie\"\"\"\n",
     "\n",
-    "    def __init__(self, main_chain_atoms):\n",
-    "        self.main_chain_atoms = main_chain_atoms\n",
-    "\n",
-    "    def _calculate_hydrogen_bond_energy(self, donnor_residue, acceptor_residue):\n",
-    "        \"\"\"Calculer l'énergie d'une liaison hydrogène à partir de l'équation énergétique\"\"\"\n",
-    "\n",
-    "        O = acceptor_residue['O']\n",
-    "        N = donnor_residue[\"N\"]\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "class SecondaryStructureAssigner:\n",
-    "    \"\"\"Secondary Structure Dispenser, Détection de α-Helix et β-Folding basée sur la liaison hydrogène\"\"\"\n",
-    "\n",
-    " \n",
-    "    \n",
-    "\n",
-    "    \n",
-    "\n",
-    "                            \n",
+    "                          \n",
     "\n",
     "\n",
     "    \n",
     "\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HydrogenBondDetector:\n",
+    "    \"\"\"Identifier les liaisons hydrogène en fonction de l'énergie\"\"\"\n",
+    "\n",
+    "    def __init__(self, main_chain_atoms):\n",
+    "        self.main_chain_atoms = main_chain_atoms\n",
+    "\n",
+    "    def _calculate_hydrogen_bond_energy(self, donor_residue, acceptor_residue):\n",
+    "        \"\"\"Calculer l'énergie d'une liaison hydrogène à partir de l'équation énergétique\"\"\"\n",
+    "\n",
+    "        O = acceptor_residue['O']\n",
+    "        N = donor_residue[\"N\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SecondaryStructureAssigner:\n",
+    "    \"\"\"Secondary Structure Dispenser, Détection de α-Helix et β-Folding basée sur la liaison hydrogène\"\"\"\n"
    ]
   }
  ],
