update the second section Calculer H energy

--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lire la structure PDB et extraire les atomes de la chaîne principale (N, CA, C, O)"
+    "1. Lire la structure PDB et extraire les atomes de la chaîne principale (N, CA, C, O)"
    ]
   },
   {
@@ -56,25 +56,19 @@
     "    def get_backbone_atoms(self):\n",
     "        \"\"\"Obtenir des informations atomiques sur la chaîne principale\"\"\"\n",
     "        return self.backbone_atoms\n",
-    "    \n",
-    "\n",
-    "                          \n",
-    "\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "    "
+    "        "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2. Calculer des hydrogènes "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +80,17 @@
     "\n",
     "    def _calculate_hydrogen_bond_energy(self, donor_residue, acceptor_residue):\n",
     "        \"\"\"Calculer l'énergie d'une liaison hydrogène à partir de l'équation énergétique\"\"\"\n",
-    "\n",
+    "        #Obtenir les coordonnées atomiques souhaitées\n",
     "        O = acceptor_residue['O']\n",
-    "        N = donor_residue[\"N\"]"
+    "        N = donor_residue[\"N\"]\n",
+    "        C = donor_residue[\"C\"]\n",
+    "        #Calculer des distances entre les atoms\n",
+    "        r_ON = (O - N).norm()\n",
+    "        r_CN = (C -N).norm()\n",
+    "        # Simplified energy calculation (hydrogen atoms are not used)\n",
+    "        energy = 0.084 * (1/r_ON - 1/r_CN) * 332\n",
+    "        \n",
+    "        return energy\n"
    ]
   },
   {
