finished the second section Calculer H energie

--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +77,19 @@
     "\n",
     "    def __init__(self, main_chain_atoms):\n",
     "        self.main_chain_atoms = main_chain_atoms\n",
+    "    \n",
+    "    def calculate_hydrogen_bonds(self):\n",
+    "            num_residue = len(self.main_chain_atoms)\n",
+    "            hbond = []\n",
+    "            for i in range(num_residue):\n",
+    "                donor_residue = self.main_chain_atoms[i]\n",
+    "                for j in range(i+1, num_residue):\n",
+    "                    acceptor_residue = self.main_chain_atoms[j]\n",
+    "                    # Calculate hydrogen bond energy\n",
+    "                    h_energy = self._calculate_hydrogen_bond_energy(donor_residue, acceptor_residue)\n",
+    "\n",
+    "                    if h_energy < -0.5:\n",
+    "                         hbond.append((i,j))\n",
     "\n",
     "    def _calculate_hydrogen_bond_energy(self, donor_residue, acceptor_residue):\n",
     "        \"\"\"Calculer l'énergie d'une liaison hydrogène à partir de l'équation énergétique\"\"\"\n",
@@ -90,7 +103,10 @@
     "        # Simplified energy calculation (hydrogen atoms are not used)\n",
     "        energy = 0.084 * (1/r_ON - 1/r_CN) * 332\n",
     "        \n",
-    "        return energy\n"
+    "        return energy\n",
+    "    \n",
+    "    \n",
+    "\n"
    ]
   },
   {
