create the third section

--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -79,17 +79,19 @@
     "        self.main_chain_atoms = main_chain_atoms\n",
     "    \n",
     "    def calculate_hydrogen_bonds(self):\n",
-    "            num_residue = len(self.main_chain_atoms)\n",
-    "            hbond = []\n",
-    "            for i in range(num_residue):\n",
-    "                donor_residue = self.main_chain_atoms[i]\n",
-    "                for j in range(i+1, num_residue):\n",
-    "                    acceptor_residue = self.main_chain_atoms[j]\n",
-    "                    # Calculate hydrogen bond energy\n",
-    "                    h_energy = self._calculate_hydrogen_bond_energy(donor_residue, acceptor_residue)\n",
+    "        num_residue = len(self.main_chain_atoms)\n",
+    "        hbonds = []\n",
+    "        for i in range(num_residue):\n",
+    "            donor_residue = self.main_chain_atoms[i]\n",
+    "            for j in range(i+1, num_residue):\n",
+    "                acceptor_residue = self.main_chain_atoms[j]\n",
+    "                # Calculate hydrogen bond energy\n",
+    "                h_energy = self._calculate_hydrogen_bond_energy(donor_residue, acceptor_residue)\n",
     "\n",
-    "                    if h_energy < -0.5:\n",
-    "                         hbond.append((i,j))\n",
+    "                if h_energy < -0.5:\n",
+    "                    hbonds.append((i,j))\n",
+    "        return hbonds\n",
+    "        \n",
     "\n",
     "    def _calculate_hydrogen_bond_energy(self, donor_residue, acceptor_residue):\n",
     "        \"\"\"Calculer l'énergie d'une liaison hydrogène à partir de l'équation énergétique\"\"\"\n",
@@ -112,7 +114,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3. Class for assigning secondary structure based on hydrogen bonds"
+   ]
   },
   {
    "cell_type": "code",
@@ -121,7 +125,12 @@
    "outputs": [],
    "source": [
     "class SecondaryStructureAssigner:\n",
-    "    \"\"\"Secondary Structure Dispenser, Détection de α-Helix et β-Folding basée sur la liaison hydrogène\"\"\"\n"
+    "    \"\"\"Secondary Structure Dispenser, Détection de α-Helix et β-Folding basée sur la liaison hydrogène\"\"\"\n",
+    "\n",
+    "    def __init__(self, main_chain_atoms, hbonds):\n",
+    "        self.hbonds = hbonds\n",
+    "        self.main_chain_atoms = main_chain_atoms\n",
+    " \n"
    ]
   }
  ],
