--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Class for assigning secondary structure based on hydrogen bonds"
+    "3. Attribution des structures secondaires"
    ]
   },
   {
@@ -130,6 +130,27 @@
     "    def __init__(self, main_chain_atoms, hbonds):\n",
     "        self.hbonds = hbonds\n",
     "        self.main_chain_atoms = main_chain_atoms\n",
+    "\n",
+    "    def assign_secondary_structure(self):\n",
+    "        helice = set()\n",
+    "        beta_sheet = set()\n",
+    "\n",
+    "        for i, j in self.hbonds:\n",
+    "            #assign_secondary_structure\n",
+    "            if abs(i - j) == 4:\n",
+    "                helice.add(i)\n",
+    "                helice.add(j)\n",
+    "            elif abs(i - j) > 4:\n",
+    "                pass\n",
+    "            \n",
+    "    def _is_parallel(self, donor, acceptor):\n",
+    "        donor_chain = self.main_chain_atoms_atoms[donor]['residue'].get_parent().get_id()\n",
+    "        acceptor_chain = self.main_chain_atoms_atoms[acceptor]['residue'].get_parent().get_id()\n",
+    "        return donor_chain == acceptor_chain\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
     " \n"
    ]
   }
