--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -133,7 +133,8 @@
     "\n",
     "    def assign_secondary_structure(self):\n",
     "        helice = set()\n",
-    "        beta_sheet = set()\n",
+    "        beta_parallel = set()\n",
+    "        beta_antiparallel = set()\n",
     "\n",
     "        for i, j in self.hbonds:\n",
     "            #assign_secondary_structure\n",
@@ -141,11 +142,16 @@
     "                helice.add(i)\n",
     "                helice.add(j)\n",
     "            elif abs(i - j) > 4:\n",
-    "                pass\n",
-    "            \n",
-    "    def _is_parallel(self, donor, acceptor):\n",
-    "        donor_chain = self.main_chain_atoms_atoms[donor]['residue'].get_parent().get_id()\n",
-    "        acceptor_chain = self.main_chain_atoms_atoms[acceptor]['residue'].get_parent().get_id()\n",
+    "                if self._is_parallel(i, j):\n",
+    "                    beta_parallel.add(i)\n",
+    "                    beta_parallel.add(j)\n",
+    "                else:\n",
+    "                    beta_antiparallel.add(i)\n",
+    "                    beta_antiparallel.add(j)\n",
+    "\n",
+    "    def _is_parallel(self, i, j):\n",
+    "        donor_chain = self.main_chain_atoms_atoms[i]['residue'].get_parent().get_id()\n",
+    "        acceptor_chain = self.main_chain_atoms_atoms[j]['residue'].get_parent().get_id()\n",
     "        return donor_chain == acceptor_chain\n",
     "    \n",
     "    \n",
