--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +149,15 @@
     "                    beta_antiparallel.add(i)\n",
     "                    beta_antiparallel.add(j)\n",
     "\n",
+    "        secondary_structure = ['C'] * len(self.backbone_atoms)\n",
+    "        for index in helice:\n",
+    "            secondary_structure[index] = 'H'\n",
+    "        for index in beta_parallel:\n",
+    "            secondary_structure[index] = \"PE\"\n",
+    "        for index in beta_antiparallel:\n",
+    "            secondary_structure[index] = \"AE\"\n",
+    "        \n",
+    "\n",
     "    def _is_parallel(self, i, j):\n",
     "        donor_chain = self.main_chain_atoms_atoms[i]['residue'].get_parent().get_id()\n",
     "        acceptor_chain = self.main_chain_atoms_atoms[j]['residue'].get_parent().get_id()\n",
@@ -158,6 +167,13 @@
     "\n",
     "\n",
     " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Classe pour comparer la structure secondaire prédite avec DSSP "
    ]
   }
  ],
