Further refinement of Part IV codes

--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import math\n",
     "import numpy as np\n",
-    "from Bio.PDB import PDBParser"
+    "from Bio.PDB import PDBParser\n",
+    "from Bio.PDB.DSSP import dssp_dict_from_pdb_file"
    ]
   },
   {
@@ -156,6 +157,8 @@
     "            secondary_structure[index] = \"PE\"\n",
     "        for index in beta_antiparallel:\n",
     "            secondary_structure[index] = \"AE\"\n",
+    "            \n",
+    "        return secondary_structure\n",
     "        \n",
     "\n",
     "    def _is_parallel(self, i, j):\n",
@@ -174,6 +177,50 @@
    "metadata": {},
    "source": [
     "4. Classe pour comparer la structure secondaire prédite avec DSSP "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Compare:\n",
+    "    \"\"\"Class for comparing custom secondary structure assignments with DSSP\"\"\"\n",
+    "    \n",
+    "    def __init__(self, pdb_filename,predicted_structure):\n",
+    "        self.pdb_filename = pdb_filename\n",
+    "        self.predicted_structure = predicted_structure\n",
+    "\n",
+    "    def _dssp_structure(self):\n",
+    "        \"\"\"Extracts the DSSP-assigned secondary structure from the PDB file.\n",
+    "        \n",
+    "        Returns:\n",
+    "            list: A list of DSSP-assigned secondary structure ('H' for helix, 'E' for beta sheet, 'C' for coil).\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        dssp = dssp_dict_from_pdb_file(self.pdb_filename)\n",
+    "\n",
+    "        dssp_structure = []\n",
+    "        for key in dssp[0].keys():\n",
+    "            dssp_code = dssp[0][key][2]\n",
+    "            if dssp_code in ('H', 'G', 'I'):  # Helices in DSSP\n",
+    "                dssp_structure.append('H')\n",
+    "            elif dssp_code in ('E', 'B'):  # Beta sheets in DSSP\n",
+    "                dssp_structure.append('E')\n",
+    "            else:\n",
+    "                dssp_structure.append('C')  # Coils\n",
+    "        return dssp_structure\n",
+    "\n",
+    "    def compare(self):\n",
+    "         \"\"\"Compares predicted secondary structure with DSSP and calculates accuracy and sensitivity.\n",
+    "        \n",
+    "        Returns:\n",
+    "            tuple: Accuracy, helix sensitivity, and beta sheet sensitivity.\n",
+    "        \"\"\"\n",
+    "         \n",
+    "    \n",
+    "        \n"
    ]
   }
  ],
