Finish the forth section

--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,14 +213,29 @@
     "        return dssp_structure\n",
     "\n",
     "    def compare(self):\n",
-    "         \"\"\"Compares predicted secondary structure with DSSP and calculates accuracy and sensitivity.\n",
+    "        \"\"\"Compares predicted secondary structure with DSSP and calculates accuracy and sensitivity.\n",
     "        \n",
     "        Returns:\n",
     "            tuple: Accuracy, helix sensitivity, and beta sheet sensitivity.\n",
     "        \"\"\"\n",
-    "         \n",
-    "    \n",
-    "        \n"
+    "        # Calculate accuracy (true positives / total residues)\n",
+    "        tp = sum([1 for i in range(len(self.predicted_structure)) if self.predicted_structure[i] == self.true_structure[i]])\n",
+    "        accuracy = tp / len(self.predicted_structure)\n",
+    "\n",
+    "        # Calculate helix sensitivity (correctly identified helices / total helices in DSSP)\n",
+    "        helix_sensitivity = sum([1 for i in range(len(self.predicted_structure)) if self.predicted_structure[i] == 'H' and self.true_structure[i] == 'H']) / sum([1 for i in range(len(self.true_structure)) if self.true_structure[i] == 'H'])\n",
+    "        \n",
+    "        # Calculate beta sheet sensitivity (correctly identified beta sheets / total beta sheets in DSSP)\n",
+    "        beta_sensitivity = sum([1 for i in range(len(self.predicted_structure)) if self.predicted_structure[i] == 'E' and self.true_structure[i] == 'E']) / sum([1 for i in range(len(self.true_structure)) if self.true_structure[i] == 'E'])\n",
+    "\n",
+    "        return accuracy, helix_sensitivity, beta_sensitivity\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Main code"
    ]
   }
  ],
