chang helice as helix

--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,15 +133,15 @@
     "        self.main_chain_atoms = main_chain_atoms\n",
     "\n",
     "    def assign_secondary_structure(self):\n",
-    "        helice = set()\n",
+    "        helix = set()\n",
     "        beta_parallel = set()\n",
     "        beta_antiparallel = set()\n",
     "\n",
     "        for i, j in self.hbonds:\n",
     "            #assign_secondary_structure\n",
     "            if abs(i - j) == 4:\n",
-    "                helice.add(i)\n",
-    "                helice.add(j)\n",
+    "                helix.add(i)\n",
+    "                helix.add(j)\n",
     "            elif abs(i - j) > 4:\n",
     "                if self._is_parallel(i, j):\n",
     "                    beta_parallel.add(i)\n",
@@ -151,7 +151,7 @@
     "                    beta_antiparallel.add(j)\n",
     "\n",
     "        secondary_structure = ['C'] * len(self.backbone_atoms)\n",
-    "        for index in helice:\n",
+    "        for index in helix:\n",
     "            secondary_structure[index] = 'H'\n",
     "        for index in beta_parallel:\n",
     "            secondary_structure[index] = \"PE\"\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,6 +237,13 @@
    "source": [
     "Main code"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
