Resolved residue number mapping issue

--- a/projet_dssp.ipynb
+++ b/projet_dssp.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,20 +91,35 @@
     "        \n",
     "        for i in range(num_residues):  # Iterate over donor residues\n",
     "            donor_residue = self.main_chain_atoms[i]\n",
+    "            donor_chain_id = donor_residue.get('chain_id', None)  # 获取 donor 的链号\n",
+    "            donor_residue_id = donor_residue['res_id']\n",
     "            for j in range(i + 1, num_residues):  # Iterate over acceptor residues\n",
     "                acceptor_residue = self.main_chain_atoms[j]\n",
+    "                acceptor_chain_id = acceptor_residue.get('chain_id', None)  # 获取 acceptor 的链号\n",
+    "                acceptor_residue_id = acceptor_residue['res_id']\n",
     "                \n",
+    "                if donor_chain_id != acceptor_chain_id:\n",
+    "                    print(f\"跨链氢键跳过: donor_chain_id={donor_chain_id}, acceptor_chain_id={acceptor_chain_id}\")\n",
+    "                    continue\n",
+    "\n",
+    "                diff = abs(donor_residue_id - acceptor_residue_id)\n",
+    "\n",
+    "                if diff > 180:  \n",
+    "                    print(f\"远距离氢键跳过: donor_residue_id={donor_residue_id}, acceptor_residue_id={acceptor_residue_id}, diff={diff}\")\n",
+    "                    continue\n",
+    "\n",
     "                # Calculate hydrogen bond energy\n",
     "                energy, r_ON, angle = self._calculate_hydrogen_bond_energy(donor_residue, acceptor_residue)\n",
     "                \n",
     "                # Only consider valid hydrogen bonds (energy < threshold)\n",
     "                if energy < energy_threshold:\n",
     "                    hbonds.append({\n",
-    "                        'donor': donor_residue,  \n",
-    "                        'acceptor': acceptor_residue,  \n",
+    "                        'donor': donor_residue,\n",
+    "                        'acceptor': acceptor_residue,\n",
     "                        'energy': energy,\n",
-    "                        'r_ON': r_ON,  # 存储 O 和 N 之间的距离\n",
-    "                        'angle': angle  # 存储角度信息\n",
+    "                        'r_ON': r_ON,\n",
+    "                        'angle': angle,\n",
+    "                        'diff': diff\n",
     "                    })\n",
     "\n",
     "        return hbonds\n",
@@ -122,11 +137,11 @@
     "        C = donor_residue['C']     # Carbon atom in donor residue\n",
     "        \n",
     "        # Calculate distances between atoms\n",
-    "        r_ON = np.linalg.norm(O - N)  # Distance between Oxygen and Nitrogen\n",
-    "        r_CN = np.linalg.norm(C - N)  # Distance between Carbon and Nitrogen\n",
+    "        r_ON = np.linalg.norm(O - N)  \n",
+    "        r_CN = np.linalg.norm(C - N)  \n",
     "        \n",
     "        # Simplified energy calculation (considering O-N and C-N distances)\n",
-    "        if r_ON > 4.1 or r_ON < 2.3:\n",
+    "        if r_ON > 4.5 or r_ON < 2.0:\n",
     "            return float('inf'), r_ON, None\n",
     "        \n",
     "        # Add angle factor to make the energy more realistic\n",
@@ -135,36 +150,20 @@
     "        HO_vector = O - H_position\n",
     "        angle = np.dot(NH_vector, HO_vector) / (np.linalg.norm(NH_vector) * np.linalg.norm(HO_vector))\n",
     "\n",
-    "        # Ensure the angle is close to 180 degrees (cosine value close to -1)\n",
-    "        if angle > 0.3:  \n",
-    "        # Allow some flexibility in the angle, but ensure it's roughly linear\n",
-    "            return float('inf'), r_ON, angle \n",
-    "        \n",
-    "        # Simplified energy equation (ignoring hydrogen atom for now)\n",
+    "        if angle > 0.3:\n",
+    "            return float('inf'), r_ON, angle\n",
+    "\n",
     "        energy = 0.084 * (1 / r_ON - 1 / r_CN) * 332\n",
-    "\n",
-    "        print(f\"r_ON: {r_ON:.2f}, angle: {angle:.2f}, energy: {energy:.2f}, donor_residue: {donor_residue['res_id']}, acceptor_residue: {acceptor_residue['res_id']}\")\n",
-    "\n",
     "        return energy, r_ON, angle\n",
-    "    \n",
+    "\n",
     "    def _estimate_hydrogen_position(self, N, C):\n",
-    "        \"\"\"Estimate the hydrogen atom position based on N-C bond vector\"\"\"\n",
-    "        # Simple estimation: Place the hydrogen atom along the N-C bond vector, slightly offset from N\n",
     "        bond_vector = C - N\n",
     "        bond_length = np.linalg.norm(bond_vector)\n",
-    "        \n",
-    "        # 检查是否有零长度向量的情况\n",
     "        if bond_length == 0:\n",
-    "            print(\"Warning: Zero bond length detected between N and C. Returning N position as fallback.\")\n",
-    "            return N  # 返回 N 位置作为回退\n",
-    "        \n",
-    "        # 归一化键向量\n",
+    "            return N\n",
     "        normalized_vector = bond_vector / bond_length\n",
-    "        \n",
-    "        # 假设典型的 N-H 键长为 1.01 Å\n",
-    "        NH_BOND_LENGTH = 1.01  # 使用常量定义 N-H 键长度\n",
+    "        NH_BOND_LENGTH = 1.01\n",
     "        H_position = N + normalized_vector * NH_BOND_LENGTH\n",
-    "        \n",
     "        return H_position\n",
     "\n"
    ]
@@ -178,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,52 +191,42 @@
     "    def assign_secondary_structure(self):\n",
     "        helix = set()\n",
     "        beta = set()\n",
-    "\n",
+    "    \n",
+    "        res_id_to_index = {res['res_id']: idx for idx, res in enumerate(self.main_chain_atoms)}\n",
     "\n",
     "        for bond in self.hbonds:\n",
     "            donor = bond['donor']\n",
     "            acceptor = bond['acceptor']\n",
     "\n",
-    "            # 获取 donor 和 acceptor 的残基编号\n",
     "            donor_residue_id = donor['res_id']\n",
     "            acceptor_residue_id = acceptor['res_id']\n",
-    "\n",
-    "            # 调试信息：打印 donor 和 acceptor 的残基编号\n",
-    "            #print(f\"Processing bond: donor_residue_id={donor_residue_id}, acceptor_residue_id={acceptor_residue_id}, diff={abs(donor_residue_id - acceptor_residue_id)}\")\n",
-    "\n",
     "            diff = abs(donor_residue_id - acceptor_residue_id)\n",
     "\n",
-    "            # 针对 α 螺旋（编号差异为 4）\n",
-    "            if diff == 4 and bond['angle'] > 0.5 and bond['r_ON'] < 3.5:\n",
+    "            print(f\"Processing bond: donor_residue_id={donor_residue_id}, acceptor_residue_id={acceptor_residue_id}, diff={abs(donor_residue_id - acceptor_residue_id)}\")\n",
+    "\n",
+    "            # 优化后的螺旋判定条件，增加对氢键能量和角度的筛选\n",
+    "            if diff in [3, 4, 5] and bond['energy'] < -0.4 and 150 <= abs(bond['angle'] * 180 / np.pi) <= 180:\n",
     "                helix.add(donor_residue_id)\n",
     "                helix.add(acceptor_residue_id)\n",
     "\n",
-    "            # 针对 3_10 螺旋（编号差异为 3）\n",
-    "            elif diff == 3 and bond['angle'] > 0.4 and bond['r_ON'] < 3.5:\n",
-    "                helix.add(donor_residue_id)\n",
-    "                helix.add(acceptor_residue_id)\n",
-    "\n",
-    "            # β 折叠片段（编号差异大于 5）\n",
-    "            elif diff > 5 and bond['r_ON'] < 4.1:\n",
+    "            # β 折叠判定条件\n",
+    "            elif 5 < diff <= 120 and bond['r_ON'] < 4.1:\n",
     "                beta.add(donor_residue_id)\n",
     "                beta.add(acceptor_residue_id)\n",
-    "\n",
     "\n",
     "        # 初始化所有残基为 'C'（环）\n",
     "        secondary_structure = ['C'] * len(self.main_chain_atoms)\n",
     "\n",
-    "        # 分配 α-螺旋 ('H')、β 折叠片段 ('E') \n",
-    "        for index in helix:\n",
-    "            if index >= 0 and index < len(secondary_structure):\n",
-    "                print(f\"Assigning helix to residue {index}\")\n",
+    "        # 分配 α-螺旋 ('H') 和 β-折叠 ('E')，通过res_id找到对应的索引\n",
+    "        for res_id in helix:\n",
+    "            if res_id in res_id_to_index:\n",
+    "                index = res_id_to_index[res_id]\n",
     "                secondary_structure[index] = 'H'\n",
     "\n",
-    "        for index in beta:\n",
-    "            if index >= 0 and index < len(secondary_structure):\n",
-    "                print(f\"Assigning beta to residue {index}\")\n",
+    "        for res_id in beta:\n",
+    "            if res_id in res_id_to_index:\n",
+    "                index = res_id_to_index[res_id]\n",
     "                secondary_structure[index] = 'E'\n",
-    "\n",
-    "\n",
     "\n",
     "        # 调试信息：打印主链原子数量和分配结果\n",
     "        print(\"Length of main_chain_atoms:\", len(self.main_chain_atoms))\n",
@@ -245,6 +234,7 @@
     "        print(\"Beta indices:\", beta)\n",
     "\n",
     "        return secondary_structure\n",
+    "\n",
     "\n"
    ]
   },
@@ -257,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,20 +365,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r_ON: 4.12, angle: 0.15, energy: -4.55, donor_residue: 50, acceptor_residue: 51\n",
-      "r_ON: 3.29, angle: -0.48, energy: -3.02, donor_residue: 58, acceptor_residue: 117\n",
-      "r_ON: 3.39, angle: -0.18, energy: -3.27, donor_residue: 58, acceptor_residue: 119\n",
-      "r_ON: 4.36, angle: 0.24, energy: -4.67, donor_residue: 84, acceptor_residue: 85\n",
-      "Assigning beta to residue 58\n",
-      "Assigning beta to residue 117\n",
-      "Assigning beta to residue 119\n",
+      "Processing bond: donor_residue_id=50, acceptor_residue_id=51, diff=1\n",
+      "Processing bond: donor_residue_id=58, acceptor_residue_id=117, diff=59\n",
+      "Processing bond: donor_residue_id=58, acceptor_residue_id=119, diff=61\n",
+      "Processing bond: donor_residue_id=84, acceptor_residue_id=85, diff=1\n",
       "Length of main_chain_atoms: 125\n",
       "Helix indices: set()\n",
       "Beta indices: {58, 117, 119}\n"
@@ -413,25 +400,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of main chain atoms extracted: 103\n",
-      "r_ON: 4.32, angle: -0.47, energy: -4.96, donor_residue: 158, acceptor_residue: 162\n",
-      "r_ON: 4.37, angle: -0.37, energy: -4.75, donor_residue: 199, acceptor_residue: 203\n",
-      "Number of hydrogen bonds detected: 2\n",
-      "Length of main_chain_atoms: 103\n",
+      "Number of main chain atoms extracted: 125\n",
+      "Number of hydrogen bonds detected: 4\n",
+      "Processing bond: donor_residue_id=50, acceptor_residue_id=51, diff=1\n",
+      "Processing bond: donor_residue_id=58, acceptor_residue_id=117, diff=59\n",
+      "Processing bond: donor_residue_id=58, acceptor_residue_id=119, diff=61\n",
+      "Processing bond: donor_residue_id=84, acceptor_residue_id=85, diff=1\n",
+      "Length of main_chain_atoms: 125\n",
       "Helix indices: set()\n",
-      "Beta indices: set()\n",
-      "预测结构: ['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C']\n",
-      "真实结构: ['C', 'C', 'C', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C']\n",
+      "Beta indices: {58, 117, 119}\n",
+      "预测结构: ['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'E', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'E', 'C', 'E', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C']\n",
+      "真实结构: ['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'C', 'C', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'C', 'C', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'C', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'C', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'C']\n",
       "螺旋灵敏度: 0.0\n",
       "β 折叠灵敏度: 0\n",
-      "Accuracy: 0.28\n",
+      "Accuracy: 0.45\n",
       "Helix Sensitivity: 0.00\n",
       "Beta Sensitivity: 0.00\n"
      ]
@@ -439,7 +428,7 @@
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    pdb_filename = '2v5f.pdb'  # Replace with your actual PDB file path\n",
+    "    pdb_filename =  '4QR3.pdb'  # Replace with your actual PDB file path\n",
     "    main(pdb_filename)"
    ]
   },
